Fix image spacing

--- a/views/core.css
+++ b/views/core.css
@@ -112,6 +112,7 @@ nav a:hover img {
 .w2of3, .w3of4, .w2of5, .w3of5, .w4of5 {
     width: 100%;
     word-wrap: break-word;
+    overflow: hidden;
 }
 @media screen and (min-width: 768px){
 
